--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.1.0",
-        "techdivision/import": "dev-master"
+        "psr/cache" : "~1.0"
     },
     "require-dev": {
         "doctrine/dbal": "2.5.*",
@@ -29,7 +29,6 @@
         "psr-4": {
             "TechDivision\\Import\\Cache\\": [
                 "src/",
-                "symfony/",
                 "tests/unit"
             ]
         }
