--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "psr/cache" : "~1.0"
     },
     "require-dev": {
+        "ramsey/uuid": "~3.7.3|3.8.*",
         "doctrine/dbal": "2.5.*",
         "pdepend/pdepend": "2.5.2",
         "phpmd/phpmd": "@stable",
