--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.1.0",
-        "psr/cache" : "~1.0"
+        "php": ">=7.1.0"
     },
     "require-dev": {
         "ramsey/uuid": "~3.7.3|3.8.*",
